Cleans up some css for terrain generator modal

--- a/app/styles/terrain_randomise.sass
+++ b/app/styles/terrain_randomise.sass
@@ -1,16 +1,6 @@
 #terrain-randomise-modal
-  #noob-view p
-    font-size: 30px
-  
-  #skip-tutorial-button
-    font-size: 16px
-  
-  .tutorial-suggestion
-    text-align: center
-    font-size: 18px
-    margin: 10px 0 30px
-  
-  .play-option
+
+  .choose-option
     margin-bottom: 15px
     width: 100%
     height: 100px
@@ -36,7 +26,7 @@
       transition: opacity 0.3s ease-in-out
       opacity: 0
     
-  .play-option:hover
+  .choose-option:hover
     opacity: 1
     .only-one
       opacity: 1
@@ -136,13 +126,3 @@
   .hard-option .preset-name
     border-top: 25px solid black
     color: white
-
-  .vs
-    position: absolute
-    left: 40%
-    right: 40%
-    text-align: center
-    top: 35px
-    font-size: 40px
-    font-weight: bolder
-    color: black
