--- a/app/templates/modal/terrain_randomise.jade
+++ b/app/templates/modal/terrain_randomise.jade
@@ -6,7 +6,7 @@ block modal-header-content
 block modal-body-content
   div#normal-view
     a(href="#")
-        div.play-option(data-preset-type="grassy", data-preset-size="small")
+        div.choose-option(data-preset-type="grassy", data-preset-size="small")
           div.preset-size.name-label
             span(data-i18n="ladder.small") Small
           div.preset-name
