Added achievement preview, exp test, stuff

--- a/app/styles/notify.sass
+++ b/app/styles/notify.sass
@@ -9,7 +9,7 @@
       position: absolute
       width: 200px
       height: 200px
-      left: -150px
+      left: -140px
       top: 0px
 
       .achievement-image
@@ -66,18 +66,30 @@
           &:empty
             display: none
 
+
+
         .progress-wrapper
           position: absolute
           padding-right: 30px
           bottom: 0px
 
+          .achievement-level
+            float: left
+            font-size: 15px
+
           .progress-bar-wrapper
+            padding-left: 30px
             width: 100%
             .progress
               border-radius: 20px
+
           .progress-bar-border
+            padding-left: 30px
             position: relative
             top: -44px
+
+          .progress-bar-border img
+            width: 100%
           /*.earned-exp
             padding-left: 5px
             font-family: Bangers
