--- a/app/templates/achievement_notify.jade
+++ b/app/templates/achievement_notify.jade
@@ -10,6 +10,7 @@ div
         .achievement-message(data-notify-html="message")
         .progress-wrapper
           //.earned-exp(data-notify-html="earnedExp")
+          span.achievement-level.badge(data-notify-html="level")
           .progress-bar-wrapper(data-notify-html="progressBar")
-          .progress-bar-border
-            img(src='/images/achievements/bar_border.png' width='100%')
+          .progress-bar-border(data-notify-html="barBorder")
+            //img(src='/images/achievements/bar_border.png' width='100%')
