--- a/app/templates/editor/achievement/edit.jade
+++ b/app/templates/editor/achievement/edit.jade
@@ -21,10 +21,11 @@ block content
     #achievement-treema
 
     #achievement-view
+      #achievement-view-inner
 
     hr
 
-    div#error-view
+    #error-view
 
   else
     .alert.alert-danger
