modifying the employer page to be more explanatory

--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -23,7 +23,15 @@ block content
   
           h2(data-i18n="employers.who") Who Are the Players?
   
-          p(data-i18n="employers.who_blurb") CodeCombateers are software developers who enjoy using their programming skills to play games. They range from college seniors at top 20 engineering programs to 20-year industry veterans.
+          p(data-i18n="employers.who_blurb") CodeCombateers are CTOs, VPs of Engineering, and graduates of top 20 engineering schools. No junior developers here. Our players enjoy playing with code and solving problems.
+
+        div.information_row
+  
+          img(class="employer_icon" src="/images/pages/employer/employer_icon5.png")
+  
+          h2(data-i18n="employers.cost") Who Are the Players?
+  
+          p(data-i18n="employers.cost_blurb") CodeCombateers are CTOs, VPs of Engineering, and graduates of top 20 engineering schools. No junior developers here. Our players enjoy playing with code and solving problems.
   
       div#rightside
   
@@ -31,9 +39,9 @@ block content
   
           img(class="employer_icon" src="/images/pages/employer/employer_icon2.png")
   
-          h2(data-i18n="employers.how") How Do We Find Developers?
+          h2(data-i18n="employers.how") How Much Do we Charge?
   
-          p(data-i18n="employers.how_blurb") We host competitive tournaments to attract competitive software engieneers. We then use in-house algorithms to identify the best players among the top 5% of tournament winners.
+          p(data-i18n="employers.how_blurb") We charge 15% of first year's salary and offer a 100% money back guarantee for 90 days. We don't charge for candidates who are already actively being interviewed at your company.
   
         div.information_row
   
@@ -50,8 +58,13 @@ block content
             strong(data-i18n="employers.why_blurb_6") personally screened by us
             span(data-i18n="employers.why_blurb_7") . Stop screening and start hiring.
 
-      h3.see-candidates-header
-        a#see-candidates(title='Contact', tabindex=-1, data-toggle="coco-modal", data-target="modal/employer_signup", data-i18n="employers.see_candidates") Click here to see our candidates
+        div.information_row
+  
+          img(class="employer_icon" src="/images/pages/employer/employer_icon6.png")
+  
+          h2(data-i18n="employers.response") What's the Response Rate?
+  
+          p(data-i18n="employers.response_blurb") Almost every developer you contact on CodeCombat will respond to inquires whether or not they want to interivew. If you would like help finding a candidate for your role, we can make recommendations.
 
   if candidates.length
 
