--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -1,7 +1,36 @@
 #employers-view
 
+  button
+    background: #fce232 /* Old browsers */
+    background: -moz-linear-gradient(top, #fce232 0%, #ea8e2b 100%) 
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fce232), color-stop(100%,#ea8e2b))
+    background: -webkit-linear-gradient(top, #fce232 0%,#ea8e2b 100%) 
+    background: -o-linear-gradient(top, #fce232 0%,#ea8e2b 100%) 
+    background: -ms-linear-gradient(top, #fce232 0%,#ea8e2b 100%) 
+    background: linear-gradient(to bottom, #fce232 0%,#ea8e2b 100%)
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fce232', endColorstr='#ea8e2b',GradientType=0 )
+    vertical-align: text-bottom
+    margin-left: 30px
+    
+    
+  .get-started-button
+    vertical-align: text-bottom
+    margin-left: 10px
+    
+  #tagline, .hiring-call-to-action
+    width: 100%
+    text-align: center
+    display: inline-block
+    margin-top: 20px
+    h1, h2, h3 
+      display: inline-block
+    button
+      display: inline-block
   h1, h2, h3
-    font: Arial
+    font-family: Arial, Helvetica, sans-serif
+    color: #333333
+  #tagline
+    margin-bottom: 20px
 
   .see-candidates-header
     margin: 30px
@@ -10,23 +39,74 @@
     #see-candidates
       cursor: pointer
 
-  .employer_icon
-    width: 125px
-    float: left
-    margin: 0px 15px 15px 0px
+  .reasons
+    height: 275px
+    margin-bottom: 25px
+    width: 100%
 
-  .information_row
-    height: 150px
-    padding-right: 15px
+    .information_row
+      height: 150px
+      padding-right: 15px
+    
 
-  #leftside
-    width: 500px
-    float: left
-
-  #rightside
-    width: 500px
-    float: left
-
+    .reason
+      width: 33%
+      padding-left: 3%
+      height: 150px
+      display: inline-block
+    .employer_icon
+      width: 125px
+      margin: 0px auto
+      
+    .reason_long
+      width: 50%
+      padding-left: 3%
+      display: inline-block
+      .employer_icon
+        display: inline-block
+        width: 25%
+        max-width: 125px
+        vertical-align: text-bottom
+      .reason_text
+        display: inline-block
+        width: 75%
+  #bottom_row
+    height: auto
+  #candidate-table
+    width: 96%
+    margin-left: 2%
+    margin-right: 2%
+    background-color: #E7E7E7
+    table
+      width: 96%
+      margin-left: 2%
+      margin-right: 2%
+      .tag_column
+        width: 25%
+        display: inline-block
+      .location_column
+        display: inline-block
+        width: 25%
+      .education_column
+        display: inline-block
+        width: 25%
+      .work_column
+        display: inline-block
+        width: 25%
+      tr 
+        .candidate-picture
+          height: 50px
+        .candidate-description
+          width: 100%
+          vertical-align: bottom
+      td
+        margin-bottom: 10px
+        margin-top: 10px
+      .border_row
+        border-bottom: 1px solid #d3d3d3
+        vertical-align: bottom
+      
+      
   .tablesorter
     //img
     //  display: none
@@ -68,7 +148,7 @@
 
 #employers-view, #profile-view.viewed-by-employer
   #outer-content-wrapper, #intermediate-content-wrapper, #inner-content-wrapper
-    background: #949494
+    background: #B4B4B4
 
   .main-content-area
     background-color: #EAEAEA
