replaced background images by border images to make containers more responsive

--- a/app/styles/play/level/tome/spell.sass
+++ b/app/styles/play/level/tome/spell.sass
@@ -26,6 +26,8 @@
     top: 0
     height: 100%
     width: 100%
+    border-width: 22px
+    border-image: url(/images/level/code_editor_background.png) 22 fill round
 
   .save-status
     display: none
