--- a/app/templates/play/level/tome/spell_list_tab_entry.jade
+++ b/app/templates/play/level/tome/spell_list_tab_entry.jade
@@ -4,10 +4,14 @@
 
 code #{methodSignature}
 
+.btn.btn-small.fullscreen-code(title="Expand code editor")
+  i.icon-fullscreen
+    
 .btn.btn-small.reload-code(title="Reload original code for " + spell.name)
   i.icon-repeat
 
 .btn.btn-small.beautify-code(title="Ctrl+Shift+B: Beautify code for " + spell.name)
   i.icon-magnet
+
 
 .clearfix
