Basic filtering functionality
Still has a few bugs

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -12,7 +12,19 @@
     vertical-align: text-bottom
     margin-left: 30px
     
-    
+  //filter panels
+  #filter
+    margin-bottom: 10px
+    .panel-heading
+      background-color: darkgrey
+    .panel-body
+      background-color: darkgrey
+     
+  #filters
+    .filter_section
+      width: 16%
+      display: inline-block
+      vertical-align: top
   .get-started-button
     vertical-align: text-bottom
     margin-left: 10px
