--- a/app/styles/recruitment_base.sass
+++ b/app/styles/recruitment_base.sass
@@ -4,6 +4,7 @@
 
 #employers-wrapper
   background-color: #B4B4B4
+  height: 100%
   #outer-content-wrapper, #intermediate-content-wrapper, #inner-content-wrapper
     background: #B4B4B4
 
@@ -14,6 +15,7 @@
     border-top: none
     background-color: #B4B4B4
     padding-bottom: 50px
+   
 
 #employer-content-area
   margin: auto
