--- a/app/styles/play/level/tome/problem_alert.sass
+++ b/app/styles/play/level/tome/problem_alert.sass
@@ -6,13 +6,16 @@
   bottom: -120px
   left: 10px
   right: 10px
-  background: transparent url(/images/level/code_editor_error_background.png) no-repeat
-  background-size: 100% 100%
+  // background: transparent url(/images/level/code_editor_error_background.png) no-repeat
+  // background-size: 100% 100%
+  background: transparent
   border: 0
   padding: 18px 35px 18px 14px
   text-shadow: none
   color: white
   word-wrap: break-word
+  border-image: url(/images/level/code_editor_error_background.png) 16 20 fill round
+  border-width: 16px 20px
 
   .close
     @include opacity(0.80)
@@ -30,11 +33,14 @@
   //&.alert-error
 
   &.alert-warning
-    background-image: url(/images/level/code_editor_warning_background.png)
+    // background-image: url(/images/level/code_editor_warning_background.png)
+    border-image-source: url(/images/level/code_editor_warning_background.png)
     
   &.alert-info
-    background-image: url(/images/level/code_editor_info_background.png)
+    // background-image: url(/images/level/code_editor_info_background.png)
+    border-image-source: url(/images/level/code_editor_info_background.png)
         
   &.alert-style
     // Do we ever want to do this for style?
-    background-image: url(/images/level/code_editor_info_background.png)
+    // background-image: url(/images/level/code_editor_info_background.png)
+    border-image-source: url(/images/level/code_editor_info_background.png)
