--- a/app/templates/play/level/tome/spell_list_tab_entry.jade
+++ b/app/templates/play/level/tome/spell_list_tab_entry.jade
@@ -6,6 +6,7 @@ code #{methodSignature}
 
 .btn.btn-small.fullscreen-code(title="Expand code editor")
   i.icon-fullscreen
+  i.icon-resize-small
     
 .btn.btn-small.reload-code(title="Reload original code for " + spell.name)
   i.icon-repeat
