--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -25,9 +25,13 @@
       width: 16%
       display: inline-block
       vertical-align: top
+    margin-bottom: 10px
   .get-started-button
     vertical-align: text-bottom
     margin-left: 10px
+  
+  #filter-button, #create-alert-button
+    float: right
     
   #tagline, .hiring-call-to-action
     width: 100%
