--- a/app/templates/employers.jade
+++ b/app/templates/employers.jade
@@ -83,7 +83,8 @@ block content
                 br
                 input(type="checkbox" name="seniorityFilter" value="Management")
                 | Management
-         
+            button.btn#filter-button Filter
+            button.btn#create-alert-button Create Alert
   if candidates.length
     #candidate-table
       table
