--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -42,7 +42,7 @@
       display: inline-block
     button
       display: inline-block
-  h1, h2, h3
+  h1, h2, h3, h4
     font-family: Arial, Helvetica, sans-serif
     color: #333333
   #tagline
