--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -33,6 +33,13 @@
   #filter-button, #create-alert-button
     float: right
     
+  #login-link, #logout-button
+    float: right
+    color: #333333
+    display: inline-block
+    :visited
+      color: #333333
+      
   #tagline, .hiring-call-to-action
     width: 100%
     text-align: center
