Add login link and rounded corners for pics

--- a/app/styles/employers.sass
+++ b/app/styles/employers.sass
@@ -119,6 +119,8 @@
       tr 
         .candidate-picture
           height: 50px
+          border-radius: 5px
+          
         .candidate-description
           width: 100%
           vertical-align: bottom
